--- a/steellady/src/assets/scss/_variables.scss
+++ b/steellady/src/assets/scss/_variables.scss
@@ -1,5 +1,10 @@
+@import "../fonts/stylesheet.css";
+
 $textColor: #fff;
 $textColorAcсent: #D1B06B;
 $textColorDark: #161D27;
 
 $mainBG: #161D27;
+
+$mainFont: "Helvetica", sans-serif;
+$secondFont: "Cormorant Garamond", serif;
