--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -1,8 +1,17 @@
 @use '_variables';
 
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&display=swap');
+
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  overscroll-behavior: none;
+  font-family: variables.$mainFont;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  color: variables.$textColor;
 }
 
 body {
@@ -86,7 +95,28 @@ textarea {
 }
 
 .container {
-  max-width: 1390px;
+  max-width: 1360px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.main_cta {
+  color: variables.$textColorDark;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 160%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  display: inline-block;
+  padding: 12px 24px;
+  background: variables.$textColorAcсent;
+  border: 1px solid variables.$textColorAcсent;
+  transition: 0.3s ease;
+
+  &:hover {
+    background: variables.$textColorAcсent;
+    backdrop-filter: blur(14px);
+    background: rgba(22, 29, 39, 0.5);
+    color: variables.$textColor;
+  }
 }
