--- a/steellady/src/assets/scss/_variables.scss
+++ b/steellady/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 @import "../fonts/stylesheet.css";
 
 $textColor: #fff;
+$contentColor: #d7d7d7;
 $textColorAcсent: #D1B06B;
 $textColorDark: #161D27;
 
