--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -139,7 +139,7 @@ h2 {
   line-height: 130%;
   letter-spacing: 0.01em;
   font-family: variables.$secondFont;
-  margin: 0 0 44px;
+  margin: 0 0 60px;
   position: relative;
   padding-bottom: 62px;
 
@@ -153,6 +153,18 @@ h2 {
     background: url(../../assets/img/head_item.svg) no-repeat center;
     background-size: contain;
   }
+
+  &.psuedo_left {
+    padding-bottom: 0;
+    &:before {
+      position: relative;
+      display: inline-block;
+      bottom: -8px;
+      padding-right: 44px;
+      left: auto;
+    }
+  }
+
 
 }
 
