--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -165,6 +165,13 @@ h2 {
     }
   }
 
+  &.psuedo_center {
+    text-align: center;
+    &:before {
+      left: calc(50% - 47px);
+    }
+  }
+
 
 }
 
