--- a/steellady/src/components/home_banner.scss
+++ b/steellady/src/components/home_banner.scss
@@ -6,7 +6,7 @@
   padding-top: 270px;
 
   &_container {
-    background: url("../assets/img/steel.png") no-repeat bottom right;
+    background: url("../assets/img/steell.webp") no-repeat bottom right 100px;
     background-size: contain;
   }
   &_content {
