--- a/steellady/src/components/team.scss
+++ b/steellady/src/components/team.scss
@@ -10,10 +10,10 @@
   }
 
   &_photo {
-    height: 400px;
-    background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
+    height: 300px;
+    background-size: cover !important;
+    background-position: top !important;
+    background-repeat: no-repeat !important;
   }
 
   &_content {
