--- a/steellady/src/components/contactUs.scss
+++ b/steellady/src/components/contactUs.scss
@@ -96,6 +96,13 @@
 
   &_form {
 
+    .error_message {
+      color: #ff2424;
+    }
+
+    .success_message {
+      color: #05b400;
+    }
 
     .contact_us {
       background: variables.$textColor;
@@ -123,6 +130,7 @@
         }
       }
     }
+
     input, textarea {
       width: 100%;
       padding: 5px 10px;
@@ -134,6 +142,10 @@
       border: 1px solid variables.$textColorDark;
       outline: none;
       resize: none;
+
+      &.error {
+        border: 1px solid #ff2424;
+      }
 
       &:hover, &:active, &:focus, &:focus-visible {
         border-color: variables.$textColorAcсent;
@@ -147,11 +159,33 @@
       padding: 15px;
       cursor: pointer;
       transition: 0.2s ease;
+      position: relative;
 
       &:hover {
         background: variables.$textColorAcсent;
         color: variables.$textColorDark;
       }
+
+      &[disabled] {
+        cursor: auto;
+        &:hover {
+          background: variables.$textColorDark;
+          color: variables.$textColor;
+        }
+      }
+
+      .loader {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: calc(50% - 15px);
+        right: -50px;
+        background: url("../assets/img/icons/loader.gif") no-repeat center;
+        background-size: contain;
+        opacity: 0.8;
+        display: none;
+      }
+
     }
   }
 
