--- a/steellady/src/components/about.scss
+++ b/steellady/src/components/about.scss
@@ -4,6 +4,10 @@
   &_container {
     display: flex;
     gap: 50px;
+
+    @media (max-width: 991px) {
+      flex-direction: column-reverse;
+    }
   }
 
   p {
@@ -28,10 +32,18 @@
     gap: 15px;
     min-width: 300px;
 
+    @media (max-width: 991px) {
+      flex-direction: row;
+    }
+
     div {
       width: 100%;
       height: 33%;
       position: relative;
+
+      @media (max-width: 991px) {
+        height: 200px;
+      }
 
       span {
         width: 100%;
