--- a/steellady/src/components/services.scss
+++ b/steellady/src/components/services.scss
@@ -16,6 +16,10 @@
     display: grid;
     gap: 15px;
     grid-template-columns: repeat(2, 1fr);
+    
+    @media (max-width: 767px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &_item {
