--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -119,7 +119,12 @@ textarea {
   padding: 12px 24px;
   background: variables.$textColorAcсent;
   border: 1px solid variables.$textColorAcсent;
+  border-radius: 2px;
   transition: 0.3s ease;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+  }
 
   &:hover {
     background: variables.$textColorAcсent;
@@ -133,10 +138,10 @@ textarea {
   margin: 0 !important;
 }
 section {
-  margin-top: 84px;
+  margin-top: 100px;
 
   @media (max-width: 767px) {
-    margin-top: 40px;
+    margin-top: 80px;
   }
 }
 p {
@@ -145,13 +150,20 @@ p {
 
 h2 {
   font-weight: 400;
-  font-size: 45px;
+  font-size: 50px;
   line-height: 130%;
   letter-spacing: 0.01em;
   font-family: variables.$secondFont;
   margin: 0 0 60px;
   position: relative;
   padding-bottom: 62px;
+
+  @media (max-width: 767px) {
+    text-align: center;
+    font-size: 35px;
+    padding-bottom: 39px;
+    margin: 0 0 40px;
+  }
 
   &:before {
     content: '';
@@ -162,16 +174,37 @@ h2 {
     left: 0;
     background: url(../../assets/img/head_item.svg) no-repeat center;
     background-size: contain;
+
+    @media (max-width: 767px) {
+      width: 50px;
+      height: 24px;
+      background: url(../../assets/img/head_item_m.svg) no-repeat center;
+      left: calc(50% - 25px);
+    }
   }
 
   &.psuedo_left {
     padding-bottom: 0;
+
+    @media (max-width: 767px) {
+      padding-bottom: 39px;
+      margin: 0 0 40px;
+    }
     &:before {
       position: relative;
       display: inline-block;
       bottom: -8px;
       padding-right: 44px;
       left: auto;
+
+      @media (max-width: 767px) {
+        width: 50px;
+        height: 24px;
+        bottom: 0;
+        padding-right: 0;
+        left: calc(50% - 25px);
+        position: absolute;
+      }
     }
   }
 
@@ -179,6 +212,10 @@ h2 {
     text-align: center;
     &:before {
       left: calc(50% - 47px);
+
+      @media (max-width: 767px) {
+        left: calc(50% - 25px);
+      }
     }
   }
 
@@ -199,6 +236,14 @@ ul {
   padding-top: 50px;
   gap: 10px;
 
+  @media (max-width: 767px) {
+    position: absolute;
+    top: -30px;
+    padding-top: 0;
+    padding-left: 0;
+    width: 100%;
+  }
+
   .presentation {
     line-height: 0;
     height: max-content;
@@ -208,15 +253,15 @@ ul {
     width: 15px;
     height: 10px;
     border-radius: 1px;
-    border: 1px solid #fff;
-    background: #fff;
+    border: 1px solid #4E555F;
+    background: #4E555F;
     box-sizing: border-box;
-    opacity: 0.6;
     transition: 0.2s ease;
     cursor: pointer;
 
     &.is-active {
-      opacity: 1;
+      background: #D7D7D7;
+      border: 1px solid #D7D7D7;
     }
   }
 }
