--- a/steellady/src/components/contactUs.scss
+++ b/steellady/src/components/contactUs.scss
@@ -2,10 +2,20 @@
 
 .contactUs {
   background: rgba(31, 39, 50, 0.85);
-  padding-top: 84px;
-  padding-bottom: 84px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   margin-top: 0;
   overflow-x: hidden;
+
+  @media (max-width: 767px) {
+    padding-top: 80px;
+    padding-bottom: 0;
+
+    .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 
   &_container {
     display: flex;
@@ -15,13 +25,16 @@
     @media (max-width: 991px) {
       flex-direction: column;
     }
-
   }
 
   &_info {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    @media (max-width: 767px) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 
   &_item {
@@ -36,6 +49,10 @@
     @media (max-width: 991px) {
       font-size: 18px;
       padding-left: 50px;
+    }
+
+    @media (max-width: 767px) {
+      font-size: 16px;
     }
 
     &.schedule {
@@ -133,10 +150,26 @@
       flex-direction: column;
       padding: 40px 80px;
       gap: 20px;
+      border-radius: 2px;
+
+      .form_title_mob {
+        display: none;
+        color: variables.$textColorDark;
+
+        @media (max-width: 767px) {
+          display: block;
+        }
+      }
 
       @media (max-width: 991px) {
         padding: 40px 40px;
       }
+
+      @media (max-width: 767px) {
+        border-radius: 0;
+        padding: 45px 15px 80px;
+      }
+
     }
 
     label {
@@ -188,6 +221,7 @@
       cursor: pointer;
       transition: 0.2s ease;
       position: relative;
+      border-radius: 2px;
 
       &:hover {
         background: variables.$textColorAcсent;
