--- a/steellady/src/components/why.scss
+++ b/steellady/src/components/why.scss
@@ -1,8 +1,18 @@
 @use '../assets/scss/_variables';
 
 .why {
-  padding: 84px 0;
+  padding: 100px 0;
   background: #fff;
+
+  @media (max-width: 767px) {
+    padding: 80px 0;
+    margin-top: 0;
+
+    .container {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 
   h2 {
     color: variables.$textColorDark;
@@ -15,6 +25,10 @@
     @media (max-width: 1050px) {
       flex-direction: column;
     }
+
+    @media (max-width: 767px) {
+      gap: 10px;
+    }
   }
 
 
@@ -26,6 +40,11 @@
     display: flex;
     gap: 25px;
     align-items: center;
+
+    @media (max-width: 767px) {
+      padding: 20px 15px;
+      gap: 16px;
+    }
   }
 
   &_counter {
@@ -37,10 +56,26 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 130%;
-    letter-spacing: 0.01em;
+
+
+    span {
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 130%;
+      letter-spacing: 0.01em;
+      font-family: variables.$mainFont ;
+
+      @media (max-width: 767px) {
+        font-size: 22px;
+        line-height: 130%;
+      }
+    }
+
+    @media (max-width: 767px) {
+      width: 70px;
+      height: 70px;
+      min-width: 70px;
+    }
   }
 
   &_content {
@@ -49,6 +84,10 @@
     line-height: 117%;
     letter-spacing: 0.01em;
     font-family: variables.$secondFont;
+
+    @media (max-width: 767px) {
+      font-size: 24px;
+    }
   }
 
   &_item_img {
@@ -66,6 +105,10 @@
       line-height: 130%;
       letter-spacing: 0.01em;
       font-family: variables.$mainFont;
+
+      @media (max-width: 767px) {
+        font-size: 24px;
+      }
     }
     .why_content {
       font-family: variables.$mainFont;
