--- a/steellady/src/components/home_banner.scss
+++ b/steellady/src/components/home_banner.scss
@@ -64,7 +64,7 @@
     }
 
     .subtitle {
-      font-size: 25px;
+      font-size: 22px;
       line-height: 128%;
       letter-spacing: 0.02em;
       color: variables.$textColorAcсent;
@@ -88,6 +88,10 @@
   }
   &_adress {
     margin-top: 40px;
+    display: none;
+    @media (max-width: 767px) {
+      display: block;
+    }
     a {
       font-size: 16px;
       line-height: 125%;
