--- a/steellady/src/components/team.scss
+++ b/steellady/src/components/team.scss
@@ -4,6 +4,7 @@
   background: #fff;
   padding-top: 100px;
   padding-bottom: 100px;
+  margin-top: 0;
 
   @media (max-width: 767px) {
     padding-top: 80px;
