--- a/steellady/src/components/about.scss
+++ b/steellady/src/components/about.scss
@@ -27,6 +27,13 @@
 
   li {
     color: variables.$contentColor;
+    font-size: 18px;
+    line-height: 130%;
+
+    @media (max-width: 767px) {
+      font-size: 16px;
+    }
+    
   }
 
 
