--- a/steellady/src/components/pageBlocks/description.scss
+++ b/steellady/src/components/pageBlocks/description.scss
@@ -1,21 +1,23 @@
 @use '../../assets/scss/_variables';
 
 .description {
-  margin-top: 0;
-  padding: 100px 0;
-  background: #fff;
-
-  @media (max-width: 767px) {
-    padding: 80px 0;
-  }
 
   &_content {
     display: flex;
     gap: 80px;
+    
+    @media (max-width: 991px) {
+      flex-direction: column;
+    }
 
     img {
       max-height: 250px;
       width: auto;
+
+      @media (max-width: 991px) {
+        margin: 0 auto;
+        display: block;
+      }
     }
   }
   &_text {
@@ -27,6 +29,15 @@
       line-height: 144%;
       letter-spacing: 0.02em;
       margin-bottom: 20px;
+
+      @media (max-width: 767px) {
+        font-size: 16px
+      }
+    }
+  }
+  &_img {
+    @media (max-width: 767px) {
+      display: none;
     }
   }
 }
