--- a/steellady/src/components/pageBlocks/tagscloud.scss
+++ b/steellady/src/components/pageBlocks/tagscloud.scss
@@ -1,2 +1,164 @@
 @use '../../assets/scss/_variables';
 
+.tagsCloud {
+  background: #1f2732;
+  margin-top: 0;
+  padding: 100px 0;
+
+  @media (max-width: 767px) {
+    padding: 80px 0;
+  }
+
+  h2 {
+
+    &:before {
+      display: none;
+    }
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 120%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    padding-bottom: 0;
+
+    @media (max-width: 767px) {
+      font-size: 30px;
+    }
+
+  }
+
+  &_tags {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 8px;
+    height: 241px;
+    overflow: hidden;
+    transition: 0.3s ease;
+    position: relative;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+      height: 450px;
+    }
+
+    &:after {
+      content: '';
+      width: 100%;
+      height: 100px;
+      background: linear-gradient(to top, #1F2732, rgba(31, 39, 50, 0));
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transition: 0.2s ease;
+    }
+
+    &.unhide {
+      height: max-content;
+
+      &:after {
+        height: 0;
+      }
+    }
+
+    span {
+      padding: 10px 20px;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 130%;
+      letter-spacing: 0.02em;
+      text-align: center;
+      border-radius: 10px;
+      background: #3b434e;
+      cursor: default;
+      user-select: none;
+      box-shadow: none;
+      box-sizing: border-box;
+      transition: 0.2s ease;
+
+      @media (max-width: 767px) {
+        width: max-content;
+        max-width: 100%;
+
+      }
+
+      &:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
+      }
+
+      &.dark {
+        background:  #161d27;
+      }
+    }
+
+  }
+
+  &_btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+  }
+
+  &_btn_hide {
+    border-radius: 2px;
+    padding: 10px 65px 10px 40px;
+    background: variables.$contentColor;
+    border: 1px solid variables.$contentColor;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: variables.$textColorDark;
+    transition: 0.2s ease;
+    position: relative;
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: calc(50% - 8px);
+      right: 40px;
+      background: url("../../assets/img/arrow.svg") no-repeat center;
+      background-size: contain;
+      transition: 0.2s ease;
+    }
+
+    &:hover {
+      box-shadow: 0 4px 8px 0 rgba(59, 67, 78, 0.6);
+    }
+    &.hide {
+      display: none;
+      &:after {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  &_footer {
+    max-width: 1100px;
+    margin: 80px auto 0;
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+      gap: 25px;
+      margin: 30px auto 0;
+
+      a {
+        width: max-content;
+        margin: 0 auto;
+      }
+    }
+
+    p {
+      max-width: 370px;
+    }
+  }
+}
