--- a/steellady/src/components/pageBlocks/description.scss
+++ b/steellady/src/components/pageBlocks/description.scss
@@ -34,6 +34,9 @@
         font-size: 16px
       }
     }
+    strong, b {
+      font-weight: 500;
+    }
   }
   &_img {
     @media (max-width: 767px) {
