--- a/steellady/src/components/pageBlocks/tabsinside.scss
+++ b/steellady/src/components/pageBlocks/tabsinside.scss
@@ -1,10 +1,11 @@
-@use '../assets/scss/_variables';
+@use '../../assets/scss/_variables';
 
-.services {
-
+.tabsinside {
+  margin: 100px 0;
   @media (max-width: 767px) {
+    margin: 0;
     padding: 80px 0;
-    background: #1f2732;
+    background: transparent;
   }
 
   h2 {
@@ -41,17 +42,21 @@
 
     @media (max-width: 767px) {
       padding: 0 10px;
+      background: transparent;
+      border-bottom: 1px solid #4e555f;
     }
 
     &:hover {
-      background: #2e3947;
+      @media (min-width: 768px) {
+        background: #2e3947;
+      }
     }
 
     @media (max-width: 767px) {
       &:last-of-type {
+        border-bottom: none;
         .services_title {
           padding-bottom: 0;
-          border-bottom: none;
         }
       }
     }
@@ -67,11 +72,11 @@
 
     @media (max-width: 767px) {
       gap: 25px;
+      border-bottom: none;
     }
 
     img {
-      height: 40px;
-      width: auto;
+      max-width: 40px;
     }
     p {
       font-size: 26px;
@@ -92,8 +97,16 @@
 
     @media (max-width: 767px) {
       display: none;
+      padding: 0 0 23px 0;
     }
   }
 
+  &_item.active {
+    .tabsinside_content {
+      @media (max-width: 767px) {
+        display: block;
+      }
+    }
+  }
 
 }
