--- a/steellady/src/components/blogpostcontent.scss
+++ b/steellady/src/components/blogpostcontent.scss
@@ -25,7 +25,9 @@
     @media (max-width: 991px) {
       width: 100%;
     }
-
+    @media (max-width: 767px) {
+      max-width: 100%;
+    }
   }
 
 
@@ -41,6 +43,10 @@
 
     svg {
       transform: rotate(90deg);
+    }
+
+    @media (max-width: 767px) {
+      width: 100%;
     }
 
   }
@@ -89,6 +95,21 @@
 
       @media (max-width: 991px) {
         margin-left: 0;
+      }
+
+      @media (max-width: 767px) {
+        border-bottom: none;
+        justify-content: center;
+        padding: 0;
+      }
+    }
+    &_content {
+      h1, h2 {
+        &:before {
+          display: none;
+        }
+        padding-bottom: 0;
+        margin: 25px 0;
       }
     }
     &_date {
