--- a/steellady/src/components/header.scss
+++ b/steellady/src/components/header.scss
@@ -24,6 +24,18 @@
     .header_navigation .logo {
       width: 164px;
     }
+
+    .header_navigation .nav .submenu.open:after {
+      top: 115px;
+
+      @media (max-width: 991px) {
+        top: 84px;
+      }
+
+      @media (max-width: 767px) {
+        top: 0;
+      }
+    }
   }
 
   &_container {
@@ -57,8 +69,8 @@
     .hamburger-react {
       display: none;
 
-      @media (max-width: 767px) {
-       display: inline-block;
+      @media (max-width: 868px) {
+        display: inline-block;
       }
     }
   }
@@ -74,7 +86,7 @@
     text-align: right;
     color: #d1b06b;
 
-    @media (max-width: 767px) {
+    @media (max-width: 868px) {
       display: none;
     }
   }
@@ -89,20 +101,20 @@
       padding: 15px 15px;
     }
 
-    @media (max-width: 767px) {
-     position: absolute;
+    @media (max-width: 868px) {
+      position: absolute;
       z-index: -1;
       width: 100%;
-      backdrop-filter: blur(14px);
-      background: rgba(22, 29, 39, 0.9);
+      background: #161d27;
       flex-direction: column;
       gap: 25px;
-      padding: 25px 15px;
+      padding: 25px 0;
       top: -500%;
       transition: 0.3s ease;
 
       &.open {
-        top: 80px;
+        top: 79px;
+        height: calc(100dvh - 79px);
       }
     }
 
@@ -123,24 +135,26 @@
 
     .nav {
       display: flex;
-      gap: 54px;
       align-items: center;
 
-      @media (max-width: 1100px) {
-        gap: 20px;
-      }
-
-      @media (max-width: 767px) {
+      @media (max-width: 868px) {
         flex-direction: column;
       }
 
-      a {
+      &_link {
         font-weight: 400;
         font-size: 18px;
-        line-height: 160%;
+        line-height: 130%;
         letter-spacing: 0.02em;
         color: #fff;
         transition: 0.3s ease;
+        cursor: pointer;
+        padding: 9px 22px;
+
+        @media (max-width: 868px) {
+          width: 100%;
+          text-align: center;
+        }
 
         &:hover {
           color: variables.$textColorAcсent;
@@ -150,6 +164,114 @@
           color: variables.$textColorAcсent;
         }
       }
+
+      .submenu {
+        position: relative;
+        transition: 0.2s ease;
+        user-select: none;
+
+        @media (max-width: 868px) {
+          position: inherit;
+          width: 100%;
+          text-align: center;
+        }
+
+        &_container {
+          position: absolute;
+          flex-direction: column;
+          padding: 7px 0;
+          background: #2E3947;
+          display: none;
+
+          @media (max-width: 868px) {
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: #161d27;
+            display: flex;
+            right: -300%;
+            transition: 0.3s ease;
+          }
+
+          button {
+            display: none;
+
+            @media (max-width: 868px) {
+              display: block;
+              border: none;
+              border-bottom: 1px solid #4e555f;
+              outline: none;
+              padding: 8px 0 15px;
+              text-align: center;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 130%;
+              letter-spacing: 0.03em;
+              color: #fff;
+              margin-bottom: 15px;
+              background: url("../assets/img/arrow1.svg") no-repeat center left 30px;
+            }
+          }
+
+          .nav_link {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 137%;
+            letter-spacing: 0.03em;
+            white-space: nowrap;
+            padding: 7px 19px;
+
+            &:hover, &.active {
+              color: variables.$textColorDark;
+              background: variables.$contentColor;
+            }
+
+            @media (max-width: 868px) {
+              text-align: center;
+              padding: 10px 16px;
+
+
+              &:hover, &.active {
+                color: variables.$textColorAcсent;
+                background: transparent;
+              }
+
+            }
+          }
+
+        }
+
+        &.open {
+          background: #2E3947;
+
+          @media (min-width: 869px) {
+            &:after {
+              content: '';
+              position: fixed;
+              width: 100dvw;
+              height: 100dvh;
+              background: rgba(31, 39, 50, 0.5);
+              left: 0;
+              top: 0;
+              z-index: -1;
+            }
+          }
+
+          @media (max-width: 869px) {
+            overflow: hidden;
+          }
+
+
+          .submenu_container {
+            display: flex;
+
+            @media (max-width: 868px) {
+              right: 0;
+            }
+          }
+        }
+      }
+
     }
   }
 
@@ -157,7 +279,7 @@
     display: flex;
     gap: 35px;
 
-    @media (max-width: 767px) {
+    @media (max-width: 868px) {
       align-items: center;
       flex-direction: column;
 
@@ -184,6 +306,16 @@
         background: url("../assets/img/icons/phone.svg") no-repeat center left;
         background-size: contain;
 
+        @media (max-width: 868px) {
+          background: url("../assets/img/icons/phon_mob.svg") no-repeat center left;
+          background-size: 25px;
+          font-size: 18px;
+          width: 210px;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          padding-left: 45px;
+        }
+
         &_mobe {
           background: url("../assets/img/icons/phon_mob.svg") no-repeat center left;
           background-size: 17px;
@@ -196,6 +328,10 @@
       &.mail {
         background: url("../assets/img/icons/mail.svg") no-repeat center left;
         background-size: contain;
+
+        @media (max-width: 868px) {
+          display: none;
+        }
       }
     }
 
@@ -204,6 +340,30 @@
       font-size: 16px;
       line-height: 160%;
       letter-spacing: 0.02em;
+
+      @media (max-width: 868px) {
+        display: none;
+      }
+
+    }
+
+    &_adress {
+      display: none;
+
+      @media (max-width: 868px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        width: 100% !important;
+        padding: 25px 0;
+        border-top: 1px solid #4e555f;
+        border-bottom: 1px solid #4e555f;
+
+        span {
+          max-width: 250px;
+        }
+      }
     }
   }
 
