--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -44,6 +44,13 @@ a {
   text-decoration: none;
 }
 
+ul li {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+  letter-spacing: .02em;
+}
+
 a,p,div,section {
   box-sizing: border-box;
 }
