--- a/steellady/src/components/pageBlocks/tagscloud.scss
+++ b/steellady/src/components/pageBlocks/tagscloud.scss
@@ -144,7 +144,8 @@
     max-width: 1100px;
     margin: 80px auto 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 120px;
 
     @media (max-width: 767px) {
       flex-direction: column;
