--- a/steellady/src/components/reviews.scss
+++ b/steellady/src/components/reviews.scss
@@ -17,8 +17,8 @@
         border-radius: 100%;
         width: 84px;
         height: 84px;
-        background-size: cover;
-        background-position: center;
+        background-size: cover !important;
+        background-position: center !important;
       }
     }
 
