--- a/steellady/src/assets/scss/main.scss
+++ b/steellady/src/assets/scss/main.scss
@@ -15,6 +15,7 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -49,6 +50,10 @@ ul li {
   font-size: 18px;
   line-height: 144%;
   letter-spacing: .02em;
+
+  @media (max-width: 991px) {
+    font-size: 16px;
+  }
 }
 
 a,p,div,section {
