--- a/steellady/src/components/header.scss
+++ b/steellady/src/components/header.scss
@@ -109,7 +109,8 @@
       flex-direction: column;
       gap: 25px;
       padding: 25px 0;
-      top: -500%;
+      top: -300dvh;
+      justify-content: flex-start;
       transition: 0.3s ease;
 
       &.open {
@@ -149,11 +150,13 @@
         color: #fff;
         transition: 0.3s ease;
         cursor: pointer;
-        padding: 9px 22px;
+        padding: 15px 22px;
+        -webkit-tap-highlight-color: transparent;
 
         @media (max-width: 868px) {
           width: 100%;
           text-align: center;
+          font-size: 22px;
         }
 
         &:hover {
@@ -215,11 +218,11 @@
 
           .nav_link {
             font-weight: 400;
-            font-size: 16px;
+            font-size: 18px;
             line-height: 137%;
             letter-spacing: 0.03em;
             white-space: nowrap;
-            padding: 7px 19px;
+            padding: 11px 19px;
 
             &:hover, &.active {
               color: variables.$textColorDark;
@@ -362,6 +365,10 @@
 
         span {
           max-width: 250px;
+        }
+        &_btn {
+          color: variables.$textColorAcсent;
+          margin-top: 10px;
         }
       }
     }
