--- a/steellady/src/components/home_banner.scss
+++ b/steellady/src/components/home_banner.scss
@@ -13,12 +13,44 @@
     flex-direction: column;
     padding-top: 214px;
 
+    @media (max-width: 868px) {
+      padding-top: 79px;
+    }
+
+    @media (max-width: 767px) {
+      height: auto;
+    }
+
     .container {
       width: 100%;
+      height: 100%;
+      min-height: max-content;
     }
 
     .home_banner_container {
       padding-top: 70px;
+      position: relative;
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      @media (max-width: 767px) {
+        padding-top: 0;
+      }
+
+      &:before {
+        content: '';
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background: url("../assets/img/steell.webp") no-repeat bottom right 0;
+        background-size: contain;
+        @media (max-width: 767px) {
+          display: none;
+        }
+      }
     }
     .home_banner_content {
       display: flex;
@@ -29,7 +61,7 @@
 
       @media (max-width: 767px) {
         align-items: center;
-        gap: 0;
+        gap: 40px;
       }
 
       h1 {
@@ -56,18 +88,6 @@
     height: auto;
   }
 
-  &_container {
-    background: url("../assets/img/steell.webp") no-repeat bottom right 100px;
-    background-size: contain;
-
-    @media (max-width: 991px) {
-      background: url("../assets/img/steell.webp") no-repeat bottom right;
-      background-size: 40%;
-    }
-    @media (max-width: 767px) {
-      background: none;
-    }
-  }
   &_content {
     max-width: 49%;
     padding-bottom: 50px;
