--- a/steellady/src/components/pageBlocks/faq.scss
+++ b/steellady/src/components/pageBlocks/faq.scss
@@ -22,6 +22,7 @@
     letter-spacing: 0.02em;
     position: relative;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
     
     @media (max-width: 767px) {
       padding: 20px 50px 20px 20px;
