--- a/steellady/src/components/team.scss
+++ b/steellady/src/components/team.scss
@@ -35,11 +35,11 @@
   }
 
   &_name {
-    font-family: variables.$secondFont;
-    font-size: 30px;
-    line-height: 130%;
+    font-size: 25px;
+    line-height: 100%;
     letter-spacing: 0.01em;
     text-align: center;
+    font-weight: 500;
 
     @media (max-width: 767px) {
       font-size: 22px;
@@ -48,11 +48,11 @@
 
   &_status {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 178%;
+    font-size: 16px;
+    line-height: 120%;
     letter-spacing: 0.02em;
     text-align: center;
-    color: variables.$textColorAcсent;
+    margin-top: 15px;
 
     @media (max-width: 767px) {
       font-size: 16px;
