--- a/steellady/src/components/home_banner.scss
+++ b/steellady/src/components/home_banner.scss
@@ -153,7 +153,9 @@
     margin-top: 40px;
     display: none;
     @media (max-width: 767px) {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
     }
     a {
       font-size: 16px;
@@ -164,5 +166,19 @@
       display: flex;
       flex-direction: column;
     }
+  }
+}
+
+.head_adress_mob_second {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: -15px;
+    left: calc(50% - 25px);
+    width: 50px;
+    height: 1px;
+    background: #4E555F;
   }
 }
